Implemented setAll and getAll column operations (issue #14).